// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducers invoiceReducer should correctly getInvoice 1`] = `
Object {
  "createInvoiceError": null,
  "data": Object {},
  "invoice": null,
  "invoiceLoading": true,
  "invoices": Array [],
}
`;

exports[`reducers invoiceReducer should correctly getInvoices 1`] = `
Object {
  "createInvoiceError": null,
  "data": Object {},
  "invoice": null,
  "invoiceLoading": true,
  "invoices": Array [],
}
`;

exports[`reducers invoiceReducer should correctly invcoiceFailed 1`] = `
Object {
  "createInvoiceError": null,
  "data": null,
  "invoice": null,
  "invoiceLoading": false,
  "invoices": Array [],
}
`;

exports[`reducers invoiceReducer should correctly invcoiceSuccessful 1`] = `
Object {
  "createInvoiceError": null,
  "data": Object {},
  "invoice": null,
  "invoiceLoading": false,
  "invoices": Array [],
}
`;

exports[`reducers invoiceReducer should correctly receiveInvoice 1`] = `
Object {
  "createInvoiceError": null,
  "data": Object {},
  "invoice": "foo",
  "invoiceLoading": false,
  "invoices": Array [],
}
`;

exports[`reducers invoiceReducer should correctly receiveInvoices 1`] = `
Object {
  "createInvoiceError": null,
  "data": Object {},
  "invoice": null,
  "invoiceLoading": false,
  "invoices": Array [
    1,
    2,
  ],
}
`;

exports[`reducers invoiceReducer should correctly sendInvoice 1`] = `
Object {
  "createInvoiceError": null,
  "data": Object {},
  "invoice": null,
  "invoiceLoading": true,
  "invoices": Array [],
}
`;

exports[`reducers invoiceReducer should correctly setInvoice 1`] = `
Object {
  "createInvoiceError": null,
  "data": Object {},
  "invoice": "foo",
  "invoiceLoading": false,
  "invoices": Array [],
}
`;

exports[`reducers invoiceReducer should handle initial state 1`] = `
Object {
  "createInvoiceError": null,
  "data": Object {},
  "invoice": null,
  "invoiceLoading": false,
  "invoices": Array [],
}
`;
